@@ -1,3 +1,8 @@
+*gitlab-ce-8.10.4 (05 Aug 2016)
+
+  05 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.10.4.ebuild:
+  www-apps/gitlab-ce:  added ebuild for version 8.10.4
+
 *gitlab-ce-8.10.3 (02 Aug 2016)
 
   02 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.10.3.ebuild:
